--- a/app/src/main/res/layout/list_item_event_card.xml
+++ b/app/src/main/res/layout/list_item_event_card.xml
@@ -1,54 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-                                   xmlns:tools="http://schemas.android.com/tools"
-                                   android:layout_width="match_parent"
-                                   android:layout_height="200dp" xmlns:map="http://schemas.android.com/apk/res-auto"
-                                   android:layout_marginBottom="16dp"
-                                   android:clickable="true"
-                                   android:focusable="true"
-                                   android:foreground="?attr/selectableItemBackground">
+    xmlns:map="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="200dp"
+    android:layout_marginBottom="16dp"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?attr/selectableItemBackground">
 
     <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <com.google.android.gms.maps.MapView
-                android:id="@+id/event_map_view"
-                android:layout_width="match_parent"
-                android:layout_weight="1"
-                map:liteMode="true"
-                android:layout_height="0dp">
+            android:id="@+id/event_map_view"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            map:liteMode="true">
 
         </com.google.android.gms.maps.MapView>
 
         <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:padding="16dp">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="16dp">
 
                 <TextView
-                        android:id="@+id/tv_company_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@android:color/white"
-                        android:textColor="@android:color/black"
-                        android:textSize="28sp"
-                        tools:hint="SEB"/>
+                    android:id="@+id/tv_company_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/white"
+                    android:textColor="@android:color/black"
+                    android:textSize="28sp"
+                    tools:hint="SEB" />
 
                 <TextView
-                        android:id="@+id/tv_company_location"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@android:color/white"
-                        android:textColor="@android:color/black"
-                        android:textSize="16sp"
-                        tools:hint="En Gata 12"/>
+                    android:id="@+id/tv_company_location"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/white"
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp"
+                    tools:hint="En Gata 12" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
