--- a/app/src/main/res/layout/list_item_event_card.xml
+++ b/app/src/main/res/layout/list_item_event_card.xml
@@ -28,6 +28,7 @@
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
+            android:stateListAnimator="@animator/alpha"
             android:layout_height="wrap_content">
 
             <LinearLayout
