--- a/app/src/main/res/layout/activity_event_detail.xml
+++ b/app/src/main/res/layout/activity_event_detail.xml
@@ -117,8 +117,7 @@
                     android:layout_height="wrap_content"
                     android:padding="@dimen/default_margin_small"
                     android:textIsSelectable="true"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
+                    android:textSize="16sp" />
             </androidx.cardview.widget.CardView>
 
         </LinearLayout>
