--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,17 +6,31 @@
     android:layout_height="match_parent"
     tools:context=".profile.ProfileFragment">
 
-    <Button
-        android:id="@+id/btn_logout"
+    <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="@dimen/button_height"
-        android:layout_margin="@dimen/default_margin"
-        android:backgroundTint="@color/colorAccent"
-        android:text="@string/logout"
-        android:textColor="@android:color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <Button
+            android:id="@+id/btn_send_notification"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/button_height"
+            android:layout_margin="@dimen/default_margin"
+            android:backgroundTint="@color/colorAccent"
+            android:text="@string/send_notifications"
+            android:textColor="@android:color/white" />
+
+        <Button
+            android:id="@+id/btn_logout"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/button_height"
+            android:layout_margin="@dimen/default_margin"
+            android:backgroundTint="@color/colorAccent"
+            android:text="@string/logout"
+            android:textColor="@android:color/white" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
