--- a/app/src/main/res/layout/list_item_event_title.xml
+++ b/app/src/main/res/layout/list_item_event_title.xml
@@ -6,8 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="@dimen/default_margin_small"
-    android:layout_marginTop="16dp"
-    android:layout_marginBottom="12dp"
+    android:layout_marginTop="@dimen/default_margin"
+    android:layout_marginBottom="@dimen/default_margin_medium"
     android:textColor="@android:color/black"
     android:textSize="32sp"
     tools:text="Title">
