--- a/app/src/main/res/layout/activity_event_detail.xml
+++ b/app/src/main/res/layout/activity_event_detail.xml
@@ -114,6 +114,23 @@
                         android:textColor="@android:color/black"
                         android:textSize="14sp"
                         tools:hint="Cool Street 123" />
+
+                    <TextView
+                        android:id="@+id/tv_check_in"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/default_margin_mini"
+                        android:alpha="0.7"
+                        android:background="?attr/selectableItemBackground"
+                        android:clickable="true"
+                        android:drawableStart="@drawable/ic_location_icon"
+                        android:drawablePadding="@dimen/default_margin_small"
+                        android:focusable="true"
+                        android:gravity="center_vertical"
+                        android:textColor="@android:color/black"
+                        android:textSize="14sp"
+                        android:text="23 of 30 checked in"
+                        tools:hint="23 of 30 checked in" />
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
 
