--- a/app/src/main/res/layout/bottom_sheet_trip.xml
+++ b/app/src/main/res/layout/bottom_sheet_trip.xml
@@ -5,7 +5,7 @@
     android:id="@+id/bottom_sheet_trip"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/white"
+    android:background="@drawable/bottom_sheet_background"
     android:clickable="true"
     android:clipChildren="false"
     android:clipToPadding="false"
@@ -19,69 +19,57 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:clipChildren="false"
-        android:clipToPadding="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.cardview.widget.CardView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:clipChildren="false"
             android:clipToPadding="false"
-            android:clickable="true"
-            android:focusable="true">
+            android:gravity="center"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tv_bottom_sheet_title"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:foreground="?attr/selectableItemBackground"
+                android:paddingTop="16dp"
+                android:gravity="center"
+                android:paddingBottom="16dp"
+                android:text="@string/travel_info"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:orientation="vertical"
-                android:clipChildren="false"
+                android:orientation="horizontal"
+                android:layout_marginStart="@dimen/default_margin"
+                android:layout_marginEnd="@dimen/default_margin"
                 android:clipToPadding="false"
-                android:gravity="center"
+                android:clipChildren="false"
                 android:layout_height="wrap_content">
 
-                <TextView
-                    android:id="@+id/tv_bottom_sheet_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:foreground="?attr/selectableItemBackground"
-                    android:paddingTop="16dp"
-                    android:gravity="center"
-                    android:paddingBottom="16dp"
-                    android:text="@string/travel_info"
-                    android:textStyle="bold" />
+                <Button
+                    android:id="@+id/btn_pre_event"
+                    android:layout_width="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_height="@dimen/button_height"
+                    android:layout_marginRight="@dimen/default_margin_small"
+                    android:text="Housing"
+                    android:textColor="@android:color/white" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:orientation="horizontal"
-                    android:layout_marginStart="@dimen/default_margin"
-                    android:layout_marginEnd="@dimen/default_margin"
-                    android:clipToPadding="false"
-                    android:clipChildren="false"
-                    android:layout_height="wrap_content">
-
-                    <Button
-                        android:id="@+id/btn_pre_event"
-                        android:layout_width="wrap_content"
-                        android:layout_weight="1"
-                        android:layout_height="@dimen/button_height"
-                        android:layout_marginRight="@dimen/default_margin_small"
-                        android:text="Housing"
-                        android:textColor="@android:color/white" />
-
-                    <Button
-                        android:id="@+id/btn_post_event"
-                        android:layout_width="wrap_content"
-                        android:layout_weight="1"
-                        android:layout_height="@dimen/button_height"
-                        android:text="Contacts"
-                        android:textColor="@android:color/white" />
-                </LinearLayout>
-
+                <Button
+                    android:id="@+id/btn_post_event"
+                    android:layout_width="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_height="@dimen/button_height"
+                    android:text="Contacts"
+                    android:textColor="@android:color/white" />
             </LinearLayout>
 
-        </androidx.cardview.widget.CardView>
+        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_feed"
