--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <ListPreference
-        android:key="@string/navigation_preference"
-        android:title="Navigation Preference"
         android:entries="@array/navigation_way_array_names"
         android:entryValues="@array/navigation_way_array_values"
+        android:key="@string/navigation_preference"
         android:summary="Choose a preferred navigation style"
-        />
+        android:title="Navigation Preference" />
+
+    <CheckBoxPreference
+        android:defaultValue="true"
+        android:key="@string/live_location_preference_key"
+        android:summary="Allow live location sharing"
+        android:title="Live Location Sharing" />
 </PreferenceScreen>
